syntax = "proto3";

package primeDecomp;
option java_multiple_files = true;
option java_package = "com.proto.primeDecomp";

message PrimeNumber{
  int32 prime_number_value = 1;
}

message PrimeDecompRequest{
  PrimeNumber prime_number = 1;
}

message PrimeDecompResponse{
  int32 prime_decomp_response = 1;
}

service PrimeDecompService{
  rpc DecomposePrimeNumber(PrimeDecompRequest) returns (stream PrimeDecompResponse){};
}